与java程序联合调试